fix(ui): back to top button causing extra space
Add overflow clipping for y-direction to prevent the "back to top"
button from creating extra vertical space on the page.

--- a/tesys_tagboard/theme/static_src/src/styles.css
+++ b/tesys_tagboard/theme/static_src/src/styles.css
@@ -341,7 +341,6 @@ rendered document size */
 .back-to-top-wrapper {
   position: absolute;
   top: 250vh;
-  left: --spacing(2);
   bottom: 0;
   width: 3rem;
   pointer-events: none;
